# tree-encoded-bitmaps

./: .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  api.hpp  api_test.cpp  bidirectional_mapping.hpp  bitmap.hpp  column_container.hpp  column_imprints.hpp  container_iterator.hpp  dynamic_bitmap.hpp  dynamic_partitioned_tree_mask.hpp  dynamic_tree_mask_lo.hpp  dynamic_tree_mask_lo_test.cpp  file_parser.hpp  h_psma.hpp  histograms.hpp  index.hpp  iter_tester.cpp  iterate_1fills_test.cpp  iterate_test.cpp  main.cpp  markov_process.gv  old_main_alex.cpp  partitioned_tree_mask.hpp  rank.hpp  roaring_bitmap.hpp  rule_of_five.hpp  static_stack.hpp  test_utils.cpp  test_utils.hpp  tests.hpp  tree_mask_lo.hpp  tree_mask_po.hpp  tree_mask_test.cpp  (+6 more)
dtl_storage/src/dtl_storage/: bitpack.hpp  dict.hpp  psma.hpp  tree.hpp  tree_mask.hpp
dtl_storage/src/dtl_storage/storage/: column_block.hpp  relation.hpp  schema.hpp
experiments/compression/: common.hpp  compression.sh  main_compression.cpp  main_compression_diff_updates_with_size_limit.cpp  main_compression_optimizations.cpp  main_compression_optimizations_metrics.cpp  main_compression_skyline.cpp  main_compression_skyline_fine.cpp  main_compression_uniform.cpp  main_compression_varying_d.cpp  main_compression_varying_f.cpp  main_lossycompression.cpp
experiments/index/: main_index_compression.cpp
experiments/performance/: common.hpp  common_bitwise.hpp  common_bitwise_revision.hpp  main_microbenchmark_downwards_navigation.cpp  main_microbenchmark_upwards_navigation.cpp  main_performance.cpp  main_performance_construction.cpp  main_performance_decompress_single.cpp  main_performance_intersect.cpp  main_performance_intersect_revision.cpp  main_performance_intersect_single.cpp  main_performance_profiling.cpp  main_performance_skyline.cpp  main_performance_update_tp_varying_merge_threshold.cpp  main_performance_varying_f.cpp  main_performance_varying_number_of_pending_updates.cpp
experiments/real/: real.cpp  real_lossy.cpp  real_lossy_examine.cpp  real_revision.cpp
experiments/real/real-roaring-dataset/dimension_003/: dimension_003_bitmap_000000.txt  dimension_003_bitmap_000001.txt  dimension_003_bitmap_000002.txt  dimension_003_bitmap_000003.txt  dimension_003_bitmap_000004.txt  dimension_003_bitmap_000005.txt  dimension_003_bitmap_000006.txt  dimension_003_bitmap_000007.txt  dimension_003_bitmap_000008.txt  dimension_003_bitmap_000009.txt  dimension_003_bitmap_000010.txt  dimension_003_bitmap_000011.txt  dimension_003_bitmap_000012.txt  dimension_003_bitmap_000013.txt  dimension_003_bitmap_000014.txt  dimension_003_bitmap_000015.txt  dimension_003_bitmap_000016.txt  dimension_003_bitmap_000017.txt  dimension_003_bitmap_000018.txt  dimension_003_bitmap_000019.txt  dimension_003_bitmap_000020.txt  dimension_003_bitmap_000021.txt  dimension_003_bitmap_000022.txt  dimension_003_bitmap_000023.txt  dimension_003_bitmap_000024.txt  dimension_003_bitmap_000025.txt  dimension_003_bitmap_000026.txt  dimension_003_bitmap_000027.txt  dimension_003_bitmap_000028.txt  dimension_003_bitmap_000029.txt  dimension_003_bitmap_000030.txt  dimension_003_bitmap_000031.txt  dimension_003_bitmap_000032.txt  dimension_003_bitmap_000033.txt  dimension_003_bitmap_000034.txt  dimension_003_bitmap_000035.txt  dimension_003_bitmap_000036.txt  dimension_003_bitmap_000037.txt  dimension_003_bitmap_000038.txt  dimension_003_bitmap_000039.txt  (+15095 more)
experiments/tool/: compress_all.cpp  compress_file.cpp  histo.cpp
experiments/util/: bitmap_db.cpp  bitmap_db.hpp  bitmap_db_numeric.cpp  bitmap_db_numeric.hpp  bitmap_types.hpp  config.hpp  database.cpp  database.hpp  differential_bitmap_types.hpp  gen.cpp  gen.hpp  params.hpp  prep_data.cpp  prep_data.hpp  prep_updates.hpp  seq_db.cpp  seq_db.hpp  threading.hpp  types.hpp
repro/src/dtl/bitmap/: dynamic_bitmap.hpp  dynamic_roaring_bitmap.hpp  dynamic_wah.hpp  partitioned_position_list.hpp  partitioned_range_list.hpp  position_list.hpp  range_list.hpp
src/: version.h.in
src/dtl/: bitmap.hpp  iterator.hpp  static_stack.hpp  static_stack2.hpp
src/dtl/bitmap/: bah.hpp  bah_patterns.cpp  bah_patterns.hpp  bah_types.hpp  bbc.hpp  bitwise_operations.hpp  concise.hpp  dynamic_bitmap.hpp  dynamic_partitioned_tree_mask.hpp  dynamic_roaring_bitmap.hpp  dynamic_tree.hpp  dynamic_tree_mask_lo.hpp  dynamic_wah.hpp  iterator.hpp  partitioned_position_list.hpp  partitioned_range_list.hpp  position_list.hpp  range_list.hpp  teb.hpp  teb_builder.hpp  teb_flat.hpp  teb_iter.hpp  teb_legacy.hpp  teb_old_constructor.hpp  teb_perfect_levels.hpp  teb_scan.hpp  teb_scan_iter.hpp  teb_scan_util.hpp  teb_types.hpp  teb_util.hpp  teb_wrapper.hpp  tree_mask_util.hpp  uah.hpp  uah_skip.hpp  xah.hpp  xah_skip.hpp
src/dtl/bitmap/diff/: diff.hpp  merge.hpp  merge_teb.hpp
src/dtl/bitmap/part/: part.hpp  part_run.hpp  part_updirect.hpp  part_upforward.hpp
src/dtl/bitmap/static/: bitmap.hpp  partitioned_tree_mask.hpp  roaring_bitmap.hpp  tree_mask_lo.hpp  tree_mask_po.hpp  wah.hpp
src/dtl/bitmap/util/: base64.hpp  binary_tree_structure.hpp  buffer.hpp  (+29 more)
src/dtl/storage/: column_container.hpp  container_iterator.hpp  histograms.hpp  zCurve_compiletime.hpp  z_curve_runtime.hpp
test/dtl/bitmap/: api_bitwise_operation_test.cpp  api_encode_decode_test.cpp  api_encode_decode_using_iterator_test.cpp  api_random_access_test.cpp  api_range_iterator_skip_test.cpp  api_range_iterator_test.cpp  api_run_iterator_skip_test.cpp  api_run_iterator_test.cpp  api_set_operation_test.cpp  api_test.cpp  api_types.hpp  bit_buffer_avx2_test.cpp  bit_buffer_avx512_test.cpp  bit_buffer_test.cpp  bitmap_fun_test.cpp  bitwise_operations_helper.hpp  diff_test.cpp  encode_decode_pregenerated_bitmaps_test.cpp  iter_tester.cpp  iterate_1fills_test.cpp.OFF  iterate_test.cpp  part_diff_test.cpp  plain_bitmap_iter_test.cpp  sandbox_test.cpp  static_api_test.cpp.OFF  teb_compression_levels_test.cpp  teb_scan_util_test.cpp  teb_test.cpp  update_test.cpp  xah_compression_test.cpp  xah_test.cpp
test/dtl/storage/: tests.hpp
(+12 files in other folders)
